# g-quick-cryptor

./: .gitignore  Makefile.in  README  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  g_quick_cryptor.ui  main.c
